<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/all_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="安全、透明、便捷、值得投资"
        android:textSize="16sp"
        android:textColor="@color/material_yellow_200"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle|end"
        android:divider="@drawable/divider"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sheet_height_48"
            android:paddingTop="@dimen/divider_margin_8"
            android:paddingLeft="@dimen/divider_margin_8"
            android:drawableLeft="@drawable/icon_input_user"
            android:hint="@string/hint_username_register"
            style="@style/MyEditText"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sheet_height_48"
            android:paddingTop="@dimen/divider_margin_8"
            android:paddingLeft="@dimen/divider_margin_8"
            android:drawableLeft="@drawable/icon_input_user"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            style="@style/MyEditText"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sheet_height_48"
            android:paddingTop="@dimen/divider_margin_8"
            android:paddingLeft="@dimen/divider_margin_8"
            android:drawableLeft="@drawable/icon_input_pwd"
            android:hint="@string/hint_set_password"
            style="@style/MyEditText"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/sheet_height_48"
            android:paddingTop="@dimen/divider_margin_8"
            android:paddingLeft="@dimen/divider_margin_8"
            android:drawableLeft="@drawable/icon_input_pwd"
            android:hint="@string/hint_password_again"
            style="@style/MyEditText"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/sheet_height_48"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_validate_number"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/sheet_height_48"
                android:paddingTop="@dimen/divider_margin_8"
                android:paddingLeft="@dimen/divider_margin_8"
                android:drawableLeft="@drawable/icon_input_vali"
                android:hint="@string/hint_validate_number"
                style="@style/MyEditText"
                android:inputType="number"/>

            <com.daiqile.ruidajinfu.view.TimeButton
                android:id="@+id/tb_get_validate_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_validate_number"
                android:textSize="@dimen/main_body_text_size_14"
                android:background="@null"
                android:layout_gravity="center_vertical"
                android:textColor="@color/material_yellow_200"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sheet_height_48"
        android:background="@drawable/background_button"
        android:text="@string/register"
        android:layout_marginTop="@dimen/sheet_height_48"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_body_text_size_14"
            android:text="@string/register_agreement"
            android:textColor="@color/material_textWhite_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_body_text_size_14"
                android:text="@string/already_have_account"
                android:textColor="@color/material_textWhite_text"/>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/main_body_text_size_14"
                android:text="@string/login"
                android:textColor="@color/material_yellow_200"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>